--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ html {
 
 body {
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
 }
 
 .App {
@@ -23,7 +24,7 @@ body {
 }
 
 section {
-  padding-top: 5rem;
+  padding-top: 6.5rem;
   padding-inline: 1rem;
 }
 
