--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -85,6 +85,7 @@
     z-index: 1;
 } */
 
+
 .projectsContainer {
     grid-template-areas: "a b c";
 }
@@ -100,16 +101,56 @@
     margin-left: 1rem;
 }
 
+/* .project1 {
+    background-color: white;
+    grid-area: c;
+} */
+
 .active {
-    width: 100%;
-    grid-area: b;
+    width: 100% !important;
+    grid-area: b !important;
+    /* background-color: red; */
+    z-index: 100;
+}
+
+.project h2 {
+    opacity: 0;
 }
 
 .active h2 {
-    display: block;
+    opacity: 1;;
 }
 
-.active + .project {
+.project3 {
+    /* background-color: black; */
+    z-index: 20;
+
+    width: 80%;
+    justify-self: end;
+    /* margin-right: -15%; */
+    /* margin-bottom: 2rem; */
+    /* translate: 15% -0.25rem; */
+    grid-area: c;
+}
+
+
+.project:not(.active) {
+    /* background-color: #811A84; */
+    position: absolute;
+    justify-self: end;
+
+    top: 5rem;
+    /* right: -50%; */
+    /* translate: 50%; */
+    translate: 15% -0.25rem;
+    max-width: 275px;
+    grid-area: c;
+}
+
+.project:not(.active):not(.project2) {
+    /* background-color: palegreen; */
+    z-index: 10;
+
     width: 80%;
     justify-self: end;
     /* margin-right: -15%; */
@@ -118,15 +159,23 @@
     grid-area: c;
 }
 
-.active + .project + .project {
+.project2:not(.active) + .project:not(.active) {
+    /* background-color: khaki; */
+    z-index: 0;
+}
+
+.active + .project + .project,
+.active + .project + .project + .project {
     position: absolute;
     top: 5rem;
     right: -50%;
     translate: 50%;
     max-width: 275px;
+    /* background-color: yellow; */
+    z-index: -10;
 }
 
-.active + .project img {
+.project:not(.active) img {
     filter: blur(4px);
 }
 
@@ -134,26 +183,7 @@
     opacity: 0;
 }
 
-.project:not(.active):not(.active ~ .project) {
-    width: 100%;
-    grid-area: a;
-    translate: -50% -1.75rem;
-    scale: 1.2;
-    /* transform: scale(1.2) translateX(-45%); */
-    /* margin-bottom: 5rem; */
-}
-
-
-/* .project:not(.active):not(.active ~ .project) {
-    position: absolute;
-    top: 2.5rem;
-    left: 35%;
-    max-width: 440px;
-    transform: translateX(-145%) scale(1.2);
-} */
-
 .project {
-    /* transition: all 250ms; */
     transition: translate 500ms, scale 500ms, width 500ms, margin 500ms;
 }
 
