--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@ section {
   padding-inline: 1rem;
 }
 
+main {
+  position: relative;
+}
+
 /* .divBlur {
   background-color: rgba(255,255,255, 0.15);
   -webkit-backdrop-filter: blur(6px);
