--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -58,139 +58,107 @@
     }
 }
 
-/* .projectInput:nth-of-type(1):checked ~ label {
-    transform: scale(50%);
-} */
-
-/* input:checked ~ label {
-    display: none;
-} */
-
-
-/* #item-2:checked ~ .cards #song-1, #item-3:checked ~ .cards #song-2 {
-    transform: translatex(-40%) scale(.8);
-    opacity: .4;
-    z-index: 0;
-}
-  
-#item-1:checked ~ .cards #song-2, #item-2:checked ~ .cards #song-3 {
-    transform: translatex(40%) scale(.8);
-    opacity: .4;
-    z-index: 0;
-}
-
-#item-1:checked ~ .cards #song-1, #item-2:checked ~ .cards #song-2, #item-3:checked ~ .cards #song-3 {
-    transform: translatex(0) scale(1);
-    opacity: 1;
-    z-index: 1;
-} */
-
-
-.projectsContainer {
-    grid-template-areas: "a b c";
-}
-
-.projectsGradient {
-    position: absolute;
-    grid-column: a;
-    top: 35%;
-    left: 0;
-}
-
-.project {
-    margin-left: 1rem;
-}
-
-/* .project1 {
-    background-color: white;
-    grid-area: c;
-} */
-
-.active {
-    width: 100% !important;
-    grid-area: b !important;
-    /* background-color: red; */
-    z-index: 100;
-}
-
-.project h2 {
-    opacity: 0;
-}
-
-.active h2 {
-    opacity: 1;;
-}
-
-.project3 {
-    /* background-color: black; */
-    z-index: 20;
-
-    width: 80%;
-    justify-self: end;
-    /* margin-right: -15%; */
-    /* margin-bottom: 2rem; */
-    /* translate: 15% -0.25rem; */
-    grid-area: c;
-}
-
-
-.project:not(.active) {
-    /* background-color: #811A84; */
-    position: absolute;
-    justify-self: end;
-
-    top: 5rem;
-    /* right: -50%; */
-    /* translate: 50%; */
-    translate: 15% -0.25rem;
-    max-width: 275px;
-    grid-area: c;
-}
-
-.project:not(.active):not(.project2) {
-    /* background-color: palegreen; */
-    z-index: 10;
-
-    width: 80%;
-    justify-self: end;
-    /* margin-right: -15%; */
-    /* margin-bottom: 2rem; */
-    translate: 15% -0.25rem;
-    grid-area: c;
-}
-
-.project2:not(.active) + .project:not(.active) {
-    /* background-color: khaki; */
-    z-index: 0;
-}
-
-.active + .project + .project,
-.active + .project + .project + .project {
-    position: absolute;
-    top: 5rem;
-    right: -50%;
-    translate: 50%;
-    max-width: 275px;
-    /* background-color: yellow; */
-    z-index: -10;
-}
-
-.project:not(.active) img {
-    filter: blur(4px);
-}
-
-.project:not(.active) h2 {
-    opacity: 0;
-}
-
-.project {
-    transition: translate 500ms, scale 500ms, width 500ms, margin 500ms;
-}
-
-.project img {
-    transition: filter 500ms;
-}
-
-.project h2 {
-    transition: opacity 500ms;
+@media screen and (min-width: 600px) {
+    .projectsContainer {
+        grid-template-areas: "a b c";
+    }
+    
+    .projectsGradient {
+        grid-column: a;
+    }
+    
+    .project {
+        margin-left: 1rem;
+    }
+    
+    .active {
+        width: 100% !important;
+        grid-area: b !important;
+        /* background-color: red; */
+        z-index: 100;
+    }
+    
+    .project h2 {
+        opacity: 0;
+    }
+    
+    .active h2 {
+        opacity: 1;;
+    }
+    
+    .project3 {
+        /* background-color: black; */
+        z-index: 20;
+    
+        width: 80%;
+        justify-self: end;
+        /* margin-right: -15%; */
+        /* margin-bottom: 2rem; */
+        /* translate: 15% -0.25rem; */
+        grid-area: c;
+    }
+    
+    
+    .project:not(.active) {
+        /* background-color: #811A84; */
+        position: absolute;
+        justify-self: end;
+    
+        top: 5rem;
+        /* right: -50%; */
+        /* translate: 50%; */
+        translate: 15% -0.25rem;
+        max-width: 275px;
+        grid-area: c;
+    }
+    
+    .project:not(.active):not(.project2) {
+        /* background-color: palegreen; */
+        z-index: 10;
+    
+        width: 80%;
+        justify-self: end;
+        /* margin-right: -15%; */
+        /* margin-bottom: 2rem; */
+        translate: 15% -0.25rem;
+        grid-area: c;
+    }
+    
+    .project2:not(.active) + .project:not(.active),
+    .project3:not(.active) + .project:not(.active) {
+        /* background-color: khaki; */
+        z-index: 0;
+    }
+    
+    .active + .project + .project,
+    .active + .project + .project + .project,
+    .active + .project + .project + .project + .project {
+        position: absolute;
+        top: 5rem;
+        right: -50%;
+        translate: 50%;
+        max-width: 275px;
+        /* background-color: yellow; */
+        z-index: -10;
+    }
+    
+    .project:not(.active) img {
+        filter: blur(4px);
+    }
+    
+    .project:not(.active) h2 {
+        opacity: 0;
+    }
+    
+    .project {
+        transition: translate 500ms, scale 500ms, width 500ms, margin 500ms;
+    }
+    
+    .project img {
+        transition: filter 500ms;
+    }
+    
+    .project h2 {
+        transition: opacity 750ms;
+    }
 }
