--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -14,6 +14,11 @@
     z-index: -1;
 }
 
+.fade {
+    opacity:0;
+    transition: opacity 1s ease-out;
+  }
+
 @keyframes arrow {
    0%, 50%, 100%{
     translate: 0 4px;
