--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -2,7 +2,8 @@
 .blob2,
 .blob3,
 .blob4,
-.blob5 {
+.blob5,
+.blob6 {
     position: absolute;
     filter: blur(80px);
     animation-duration: 12s;
@@ -37,15 +38,11 @@
     width: 310px;
     height: 275px;
     border-radius: 49% 51% 47% 53% / 56% 60% 40% 44%;
-    
-    /* background: linear-gradient(180deg, rgba(128, 255, 255, 0.63) 0%, rgba(255, 158, 216, 0.85) 100%); */
     background: linear-gradient(180deg, rgba(119, 255, 255, 0.63) 0%, rgba(255, 72, 182, 0.85) 100%);
-
     top: 70vh;
     right: 0;
     animation-name: spin, moveY;
     animation-duration: 8s;
-    /* filter: blur(65px); */
 }
 
 .blob4 {
@@ -58,7 +55,12 @@
     rotate: 180deg;
     animation-name: spin, moveX;
     filter: blur(60px);
+}
 
+@media screen and (max-width: 900px) {
+    .blob4 {
+        left: 0;
+    }
 }
 
 @keyframes spin {
@@ -85,23 +87,5 @@
     }
     25%, 75% {
         translate: 0 -2rem;
-    }
-}
-
-@keyframes spinAndMove {
-    0% {
-        transform: rotate(0deg) translateX(0);
-    }
-
-    25% {
-        transform: rotate(90deg) translateX(5rem);
-    }
-
-    75% {
-        transform: rotate(270deg) translateX(-5rem);
-    }
-
-    100% {
-        transform: rotate(360deg) translateX(0);
     }
 }
