--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,6 +1,4 @@
 .gradient {
-    /* background: rgb(255,165,225);
-    background: linear-gradient(90deg, rgba(255,165,225,1) 0%, rgba(205,252,255,1) 100%);  */
     background: rgb(75,15,77);
     background: linear-gradient(90deg, rgba(75,15,77,1) 0%, rgb(10, 87, 158) 100%); 
     color: transparent;
@@ -17,7 +15,13 @@
 .fade {
     opacity:0;
     transition: opacity 1s ease-out;
-  }
+}
+
+.fade:hover {
+    opacity: 0;
+    cursor: default;
+    pointer-events: none;
+}
 
 @keyframes arrow {
    0%, 50%, 100%{
